<resources>

    <!-- Fragment Titles -->
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_rates">ChargePoints</string>
    <string name="title_profile">Profile</string>

    <string name="title_about">About</string>
    <string name="title_news">News</string>
    <string name="title_terms">Terms and Conditions</string>
    <string name="title_car_details">Car Details</string>

    <string name="title_buy_power">Buy Power</string>
    <string name="receipt">Receipt</string>
    <string name="update_information">Update Information</string>
    <string name="cards">Cards</string>

    <!-- Preferences -->
    <string name="user_information">User Information</string>
    <string name="account_details">Account Details</string>
    <string name="name_email_password">Name, Email, Password</string>
    <string name="payment_details">Payment Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="car_details">Car Details</string>
    <string name="car_type">Car Type</string>
    <string name="payment_receipts">Payment Receipts</string>
    <string name="previous_receipts">Previous Receipts</string>

    <string name="general">General</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="sign_in_with_biometrics">Sign in with biometrics</string>
    <string name="enable_fingerprint_unlock">Enable fingerprint unlock</string>
    <string name="language">Language</string>
    <string name="select_language">Select App Language</string>

    <string name="about_us">About Us</string>
    <string name="about_us_info">Read more information about the ChargePoint App</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="languages">
        <item>Follow System Language</item>
        <item>English (UK)</item>
        <item>French (FR)</item>
        <item>German (DE)</item>
    </string-array>

    <!-- Home -->
    <string name="check_about_us">Read more about the ChargePoint app</string>
    <string name="check_news">Check the latest news from ChargePoint</string>
    <string name="check_terms">See our Terms &amp; Conditions</string>
    <string name="check_car_details">Check and update your car details</string>
    <string name="go_to_about_page">Go to About Page</string>
    <string name="go_to_news_page">Go to News Page</string>
    <string name="go_to_terms_and_conditions_page">Go to Terms and Conditions Page</string>
    <string name="go_to_car_details_page">Go to Car Details Page</string>
    <string name="charge_time">Charge Time</string>
    <string name="no_car_charging">No car charging at the moment</string>
    <string name="time_remaining">Time Remaining: %1$s</string>
    <string name="charge_complete">Charge Complete!</string>

    <!-- ChargePoint Fragment -->
    <string name="sort_by_county">Sort by County: </string>
    <string name="no_chargepoints_available">No ChargePoints available.</string>
    <string name="select_date">Select Date</string>
    <string name="chargepoint_operational">Operational: %1$s</string>
    <string name="chargepoint_fast_charge">Fast Charge: %1$s</string>
    <string name="go_to_buy_power_page">Go To Buy Power Page</string>
    <string name="num_chargepoints"># ChargePoints:</string>

    <!-- About -->
    <string name="about_the_project">About the project</string>
    <string name="project_description">This project was born thanks to the Mobile Development module. The aim of this project was to create an application useful for the electric car users.</string>
    <string name="group_description">We are a group of 4 students at the University of Limerick. We are studying Computer Sciences.</string>

    <!-- Terms & Conditions -->
    <string name="see_terms">Click on link below to see terms and conditions.</string>

    <!-- Car Details -->
    <string name="model_type_saved">Model Type Saved</string>
    <string name="car_details_about">Select Details about your Car</string>
    <string name="select_manufacturer">Select Manufacturer</string>
    <string name="select_model">Select Model</string>
    <string name="adding_car">Adding Car…</string>
    <string name="car_added">Car Added Successfully</string>

    <!-- Buy Power -->
    <string name="rate">Rate: €0.33 per KWhr</string>
    <string name="time">Time:</string>
    <string name="time_left">Time Left:</string>
    <string name="time_mins">%1$d mins</string>
    <string name="mins">mins</string>
    <string name="cost">Cost:</string>
    <string name="currency_symbol" translatable="false">€</string>
    <string name="currency_symbol_with_amount">€%1$.2f</string>
    <string name="select_card">Select Card…</string>
    <string name="create_card">Create New Card…</string>
    <string name="active_receipt">You currently have a car charging until: %1$s</string>

    <!-- Receipt -->
    <string name="go_to_receipt">Go to receipt</string>
    <string name="generateing_receipt">Generating Receipt…</string>
    <string name="receipt_id">Receipt ID: %1$s</string>
    <string name="receipt_power_amount">Amount: %1$.2f kWh</string>
    <string name="receipt_paid_with">Paid With: %1$s</string>
    <string name="receipt_amount">Amount: €%1$.2f</string>
    <string name="receipt_operator">Operator:\n %1$s</string>
    <string name="receipt_address">Address:\n%1$s,\n%2$s,\n%3$s,\n%4$s</string>
    <string name="receipt_missing_county">County not provided.</string>
    <string name="no_receipts">You have no receipts.</string>
    <string name="check_your_previous_receipts">Check your previous receipts</string>

    <!-- User -->
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="user_name_changed">Name updated</string>
    <string name="user_name_change_fail">Failed to update name</string>
    <string name="user_change_email">Change Email</string>
    <string name="user_email_changed">Email updated</string>
    <string name="user_email_change_fail">Failed to update email</string>
    <string name="user_change_password">Change Password</string>
    <string name="user_password_changed">Password updated</string>
    <string name="user_password_change_fail">Failed to update password</string>
    <string name="user_password_stars">**********</string>
    <string name="user_incorrect_email_format">Email not in the correct format</string>

    <string name="enter_new_email">Enter New Email</string>
    <string name="enter_current_email">Enter Current Email</string>
    <string name="find_nearest_charge_point">Find Nearest Charge Point</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>

    <!-- Payment Details -->
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_debit_card_information_here">Enter Debit Card Information Here</string>
    <string name="card_name">Name on Card</string>
    <string name="missing_information">Missing information</string>
    <string name="card_num_not_long_enough">Card number provided is not long enough</string>
    <string name="adding_card">Adding Card…</string>
    <string name="create_new_card">Create New Card</string>
    <string name="update_card">Update Card</string>
    <string name="identical_cards">Cards are identical</string>

    <!-- Card -->
    <string name="no_cards_available">No card available for this user.</string>
    <string name="card_name_required">Name Required</string>
    <string name="card_saved">Card Details saved successfully</string>
    <string name="mm_yy">MM/YY</string>
    <string name="ccv">CCV</string>
    <string name="card_deleted">Card deleted</string>

    <!-- Dialogs -->
    <string name="sign_out_question">Are you sure you want to sign out?</string>
    <string name="updating">Updating. Please wait…</string>

    <!-- Buttons -->
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pay">Pay</string>

    <!-- Units with placeholder-->
    <string name="kilowatt">%1$.2f kW</string>
    <string name="kilowatt_hour">%1$.2f kWh</string>
    <string name="voltage">%1$s V</string>
    <string name="amp">%1$s A</string>

    <!-- Email -->
    <string name="email_sent">Email sent!</string>
    <string name="email_wrong_address">Wrong email address.</string>
    <string name="send_by_email">Send by email</string>
    <string name="please_specified_the_email_address">Please specify the email address:</string>

    <!-- Notifications -->
    <string name="car_ready">Your car is ready!</string>
    <string name="disconnect_charger">Please disconnect the charger</string>
    <string name="car_charging">Your car is charging</string>
    <string name="tap_more_info">Tap for more info</string>


    <!-- String for the News Page-->
    <string name="news_title_1" translatable="false"> Tesla Model Releases </string>
    <string name="news_desc_1" translatable="false">Tesla has started pushing a new software update with improvement to its charging map, a new \'Tesla Toybox\' more. Despite the coronavirus pandemic, Tesla\'s software team is able to push for new features and improvements to the customer fleet.
    With the new 2020. 16 Updates, the automaker is making a few somewhat minor changes.</string>

    <string name="news_title_2" translatable="false"> 2020 Audi E-tron </string>
    <string name="news_desc_2" translatable="false"> The new Audi E-tron Sportback brings rakish looks to the elctric SUV forumula, as well as adding extra change.
    With the price of oil being cheaper than toilet paper, SUV sales will inevitably be strong in the next few months. The Audi e-Tron has been a smashing success, as they boldly entered the EV market. Now they are poised for an encore performance
        , as the 2020 Audi e-tron Sportback is ready for Summer. </string>

    <string name="news_title_3" translatable="false"> 1000 new ChargePoints </string>
    <string name="news_desc_3" translatable="false"> Around 1,000 extra charge points for electric vehicles are expected to be put in place over the next five years as part of a new on-street infrastructure scheme.
Minister for Communications, Climate Action and Environment Richard Bruton has announced funding that will help local authorities provide a widespread rollout of electric cars.</string>

    <string name="news_title_4" translatable="false"> New cars registered in Ireland   </string>
    <string name="news_desc_4" translatable="false"> MORE THAN 117,000 new cars or vehicles were registered in the Republic of Ireland in 2019, down 6.8% on 2018.
A total 117,100 new vehicles were registered in last year, down from 125,671 new cars the previous year, according to figures released by the Society of the Irish Motor Industry (Simi) today. </string>

</resources>