<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="User Information">
        <Preference
            android:icon="@drawable/ic_person_24px"
            android:key="@string/account_details"
            android:summary="Name, Email, Password"
            android:title="@string/account_details" />
        <Preference
            android:icon="@drawable/account_balance24px"
            android:key="@string/payment_details"
            android:summary="Band details"
            android:title="@string/payment_details" />
        <Preference
            android:icon="@drawable/directions_car24px"
            android:key="@string/car_details"
            android:summary="Car type"
            android:title="@string/car_details">
        </Preference>
        <Preference
            android:icon="@drawable/ic_receipt_24px"
            android:key="@string/payments_receipts"
            android:summary="Previous receipts"
            android:title="@string/payments_receipts" />
    </PreferenceCategory>

    <PreferenceCategory android:title="General">
        <SwitchPreference
            android:icon="@drawable/ic_dark_mode_24px"
            android:key="@string/dark_theme"
            android:summary="Change Theme"
            android:title="@string/dark_theme" />
        <SwitchPreference
            android:enabled="false"
            android:icon="@drawable/fingerprint24px"
            android:key="@string/sign_in_with_biometrics"
            android:summary="Enable fingerprint sign in"
            android:title="@string/sign_in_with_biometrics" />
    </PreferenceCategory>

    <PreferenceCategory android:title="">
        <Preference
            android:icon="@drawable/ic_info_24px"
            android:key="@string/about_us"
            android:summary="@string/about_us_info"
            android:title="@string/about_us" />
        <Preference
            android:icon="@drawable/ic_sign_out_24px"
            android:key="@string/sign_out"
            android:title="@string/sign_out" />
    </PreferenceCategory>

</PreferenceScreen>