<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.chargepoint.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_fragment_about"
            app:destination="@id/fragment_about" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_news"
            app:destination="@id/fragment_news" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_terms"
            app:destination="@id/fragment_terms" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_car_details"
            app:destination="@id/fragment_car_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.chargepoint.fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_navigation_map_to_fragment_buy_power"
            app:destination="@id/fragment_buy_power" />
    </fragment>

    <fragment
        android:id="@+id/navigation_rates"
        android:name="com.example.chargepoint.fragments.RatesFragment"
        android:label="@string/title_rates"
        tools:layout="@layout/fragment_rates" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.chargepoint.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/fragment_about"
        android:name="com.example.chargepoint.fragments.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/fragment_news"
        android:name="com.example.chargepoint.fragments.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/fragment_terms"
        android:name="com.example.chargepoint.fragments.TermsFragment"
        android:label="@string/title_terms"
        tools:layout="@layout/fragment_terms" />

    <fragment
        android:id="@+id/fragment_car_details"
        android:name="com.example.chargepoint.fragments.CarDetailsFragment"
        android:label="@string/title_car_details"
        tools:layout="@layout/fragment_car_details" />

    <fragment
        android:id="@+id/fragment_buy_power"
        android:name="com.example.chargepoint.fragments.BuyPowerFragment"
        android:label="@string/title_buy_power"
        tools:layout="@layout/fragment_buy_power" />
</navigation>