<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        tools:context=".fragments.PaymentDetailsFragment">

        <TextView
            android:id="@+id/titlepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_debit_card_information_here"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            app:contentPaddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlepage">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/cardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/card_name"
                    android:background="@drawable/oval"
                    android:padding="5dp"
                    android:paddingStart="12dp"
                    app:layout_constraintCircleRadius="5dp"
                    android:inputType="textPersonName"
                    android:textAlignment="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/cardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/enter_card_number"
                    android:inputType="number"
                    android:background="@drawable/oval"
                    android:padding="5dp"
                    android:paddingStart="12dp"
                    android:maxLength="16"
                    android:textAlignment="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardName" />

                <EditText
                    android:id="@+id/expiryDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:hint="@string/mm_yy"
                    android:background="@drawable/oval"
                    android:padding="5dp"
                    android:paddingStart="12dp"
                    android:inputType="date"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/securityNumber"
                    app:layout_constraintHorizontal_weight="6"
                    app:layout_constraintStart_toStartOf="parent"
                    android:focusable="false"
                    app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

                <EditText
                    android:id="@+id/securityNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/ccv"
                    android:inputType="number"
                    android:maxLength="3"
                    android:background="@drawable/oval"
                    android:padding="5dp"
                    android:paddingStart="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="4"
                    app:layout_constraintStart_toEndOf="@+id/expiryDate"
                    app:layout_constraintTop_toBottomOf="@+id/cardNumber" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/saverbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>